# AYolov2

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  Dockerfile  README.md  create_swa_model.py  decompose_model.py  distillation.py  environment.yml  eval_01.py  eval_02.py  evaluate_json.py  export.py  inference.py  main.py  mkdocs.yml  requirements-aarch64.txt  requirements-dev.txt  run_check.sh  run_docker.sh  setup_conda.sh  train.py  train_01.py  train_02.py  train_repr.py  train_rl.py  val.py  val2.py  val_optimizer.py
.github/workflows/: format-lint-unittest.yaml
aigc/: ensemble_preds.py  main.py  main_ensemble.py  requirements.txt
aigc/answer_model/: model.py
aigc/configs/: ensemble_config.yaml  submit_config.yaml  tta.yaml  yolov5x_config.yaml  yolov5xx_config.yaml  (+1 more)
cpp/: .gitignore  .pre-commit-config.yaml  .ycm_extra_conf.py  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md  run_check.sh
cpp/.github/workflows/: format-lint-unittest.yaml
cpp/docs/: index.md
cpp/include/cuda/: cudaMappedMemory.h  cudaUtility.h
cpp/include/torchscript_loader/: torchscript_loader.hpp
cpp/include/trt_loader/: trt_loader.hpp
cpp/src/tensorrt_runner/: main.cpp
cpp/src/torchscript_loader/: torchscript_loader.cpp
cpp/src/torchscript_runner/: main.cpp
cpp/src/trt_loader/: trt_loader.cpp
cpp/tests/: test_second_module.cpp
docker/: Dockerfile  Dockerfile.aarch64
docs/: index.md
res/: README.md
tests/: test_augmentation.py  test_create_swa_model.py  test_data_loader.py  test_early_stopper.py  test_export.py  test_json_evaluator.py  test_model_convert.py  test_model_manager.py  test_representation_learning.py  test_second_module.py  test_tensor_decomposition.py  test_train_model_builder.py  test_utils_general.py  test_val_model.py  test_wandb_utils.py
(+658 files in other folders)
